<resources>
    <string name="i_photo">PHOTO</string>
    <string name="i_video">VIDEO</string>
    <string name="k_logo">Logo</string>
    <string name="k_time">Time</string>
    <string name="k_address">Address</string>
    <string name="k_coordinate">Lat/Long</string>
    <string name="k_map">Map</string>
    <string name="k_weather">Weather</string>
    <string name="k_altitude">Altitude</string>
    <string name="k_note">Note</string>
    <string name="k_clock_in">CLOCK IN</string>
    <string name="k_clock_out">CLOCK OUT</string>
    <string name="i_edit_stamp">Edit Stamp</string>
    <string name="i_finish">Finish</string>
    <string name="k_please_input">Please input content</string>
    <string name="k_edit_content">Edit Content</string>
    <string name="i_done">Done</string>
    <string name="i_logo">LOGO</string>
    <string name="k_search_your_company">Enter brand or company name</string>
    <string name="k_search">Search</string>
    <string name="k_loading">Loading...</string>
    <string name="i_edit">Edit</string>
    <string name="i_delete">Delete</string>
    <string name="i_share">Share</string>
    <string name="i_flash_close">Flash Close</string>
    <string name="i_flash_auto">Flash Auto</string>
    <string name="i_flash_open">Flash Open</string>
    <string name="i_flashlight">Flash Light</string>
    <string name="i_nighmode">Night Mode</string>
    <string name="i_ratio_3x4">Ratio 3*4</string>
    <string name="i_ratio_9x16">Ratio 9*16</string>
    <string name="i_ratio_1x1">Ratio 1*1</string>
    <string name="i_ratio_full">Ratio Full</string>
    <string name="i_photo_quality">Photo Quality</string>
    <string name="i_save_origin_photo">Save Original Photo</string>
    <string name="i_swith_language">Switch Language</string>
    <string name="i_standard">Standard</string>
    <string name="i_low">Low</string>
    <string name="i_normal">Normal</string>
    <string name="i_hight">Hight</string>
    <string name="i_ultra">Ultra</string>
    <string name="k_date_sun">Sun.</string>
    <string name="k_date_mon">Mon. </string>
    <string name="k_date_tues">Tue.</string>
    <string name="k_date_wed">Wed.</string>
    <string name="k_date_thur">Thu.</string>
    <string name="k_date_fri">Fri.</string>
    <string name="k_date_sat">Sat.</string>
    <string name="k_date_jan">Jan</string>
    <string name="k_date_feb">Feb</string>
    <string name="k_date_mar">Mar</string>
    <string name="k_date_apr">Apr</string>
    <string name="k_date_may">May</string>
    <string name="k_date_jun">Jun</string>
    <string name="k_date_jul">Jul</string>
    <string name="k_date_aug">Aug</string>
    <string name="k_date_sep">Sep</string>
    <string name="k_date_oct">Oct</string>
    <string name="k_date_nov">Nov</string>
    <string name="k_date_dec">Dec</string>
    <string name="k_color_size">Color/Size</string>
    <string name="k_template_color">Template Color</string>
    <string name="k_weather_attribute">Weater Attribution</string>
    <string name="k_weather_data_sourece">Weatherkit - Data Sources</string>
    <string name="k_choose_time_style">Choose time style</string>
    <string name="k_weak_time">Week</string>
    <string name="k_hour_time">24-hour format</string>
    <string name="k_timezone_time">Timezone</string>
    <string name="k_auto_save_two">Take 2 photos, 1 with watermark, 1 without watermark</string>
    <string name="k_auto_save_one">Do not save the original image</string>
    <string name="k_template_size">Template Size</string>
    <string name="k_logo_small">Small</string>
    <string name="k_logo_large">Large</string>
    <string name="k_choose_addressstyle">Choose Address Style</string>
    <string name="k_add_logo">Add Logo</string>
    <string name="k_choose_from_web">Select logo from Google</string>
    <string name="k_choose_from_album">Select logo from album</string>
    <string name="k_edit_logo">Edit Logo</string>
    <string name="k_follow">Follow</string>
    <string name="k_upper_left">Upper Left</string>
    <string name="k_upper_right">Upper Right</string>
    <string name="k_middle">Middle</string>
    <string name="k_logo_position_title">Logo position</string>
    <string name="k_logo_size_title">Logo size</string>
    <string name="k_logo_alpha_title">Logo transparency</string>
    <string name="k_replace">Replace</string>
    <string name="k_choose_map_style">Choose map style</string>
    <string name="k_map_standard">Standard map</string>
    <string name="k_map_satellite">Satellite map</string>
    <string name="i_choose_stamp">Select Watermark</string>
    <string name="k_edit_title_tip">Edit Title</string>
    <string name="k_edit_content_tip">Edit Content</string>
    <string name="k_please_input_title">Enter title </string>
    <string name="k_please_input_content">Please enter content. </string>
    <string name="k_custom_item">Custom items </string>
    <string name="k_value_promotion_title">Timeprint guarantees photo authenticity. </string>
    <string name="k_key_feature_anti_fake_time">Time Anti-Cheating </string>
    <string name="k_key_feature_anti_fake_gps">GPS Anti-Cheating </string>
    <string name="k_got_it">Got it. </string>
    <string name="k_feed_back">Contact customer service</string>
    <string name="k_feedback_placeholder">Please enter the problems or suggestions you encounter and we will speed up the processing</string>
    <string name="k_feedback_conact">Please enter contact info, email/Whatsapp</string>
    <string name="i_submit">Submit</string>
    <string name="k_text_color">Text color</string>
    <string name="k_title">Title</string>
    <string name="k_summit_success">Submit success</string>
    <string name="k_network_exception_later">Network exception.Please try again.</string>
    <string name="k_verified_by_timemark">Verified by Timeprint Camera</string>
    <string name="k_your_title">Your title</string>
    <string name="i_date_year">year</string>
    <string name="i_date_month">month</string>
    <string name="i_date_day">day</string>
    <string name="k_timelocaiont">Time&amp;Location</string>
    <string name="k_custom_watermark">Custom Text</string>
    <string name="i_service_name">Service name</string>
    <string name="k_service_details1">1. Service details</string>
    <string name="k_service_details2">2. Service details</string>
    <string name="k_service_details3">3. Service details</string>
    <string name="k_appstore_address">The White House</string>
    <string name="k_subtitle">Subtitle</string>
    <string name="k_watermark_security">Security Patrol</string>
    <string name="k_security_title_content">Security Patrol</string>
    <string name="k_work_record">Work Record</string>
    <string name="k_project">Project</string>
    <string name="k_constr_area">Construction area</string>
    <string name="k_constr_management">Supervision unit</string>
    <string name="k_supervisor">Supervisor</string>
    <string name="k_appstore_latitude">38.8976804</string>
    <string name="k_appstore_longitude">-77.0391047</string>
    <string name="i_share_to_title">Share to</string>
    <string name="i_share_more">More</string>
    <string name="i_email">E-mail</string>
    <string name="i_not_installed_toast">The App is not dected on your device</string>
    <string name="i_search">Search</string>
    <string name="i_share_20_only">You can share up to 20 photos or videos at a time</string>
    <string name="i_photos_selected">photos selected</string>
    <string name="i_select_at_least_1">Please select at least 1 photo to use this feature</string>
    <string name="i_photo_access_limited">Photo access is limited</string>
    <string name="i_multi_share">Multi-Share</string>
    <string name="i_today">Today</string>
    <string name="i_photo_selected">photo selected</string>
    <string name="i_watermark_construction">Construction Record</string>
    <string name="i_constr_title_content">Construction Record</string>
    <string name="i_constr_subtitle">Developer</string>
    <string name="i_constr_description">Description</string>
    <string name="i_constr_area">Area</string>
    <string name="i_constr_operator">Operator</string>
    <string name="i_constr_inspection">Inspection</string>
    <string name="i_constr_inspectior">Inspector</string>
    <string name="i_constr_title">Project</string>
    <string name="i_logo_group">Logo Group</string>
    <string name="k_edit_project">Edit Project</string>
    <string name="k_edit_develop">Edit Developer</string>
    <string name="i_allow_camera_now">Allow access to your camera</string>
    <string name="i_setting">Settings</string>
    <string name="k_cancle">Cancel</string>
    <string name="k_turn_on_location_service_title">Turn on Location Services for your iPhone</string>
    <string name="k_turn_on_location_service_msg">1. Open the Settings app\n2. Select Privacy\n3. Select Location Services\n4. Turn on Location Services\n</string>
    <string name="i_please_access_location_info">Allow access to your location info</string>
    <string name="i_cant_get_location">Unable to get location</string>
    <string name="i_launch_take">Take\nPhoto Proof</string>
    <string name="i_save_photo_failed">Save  failed</string>
    <string name="i_ok">OK</string>
    <string name="i_search_by_filename">Input file name</string>
    <string name="k_folder_name">Folder</string>
    <string name="k_empty_folder">No photo or video</string>
    <string name="k_thank_you_use">Thank you for using Timeprint!</string>
    <string name="k_good_review_des">If you like it and find it helpful in your work life, please take a moment to give us a good review on the App Store and share your story. Your positive comments are the driving force for our progress. Thank you for your valuable time and support!</string>
    <string name="k_five_star">Five-star praise</string>
    <string name="k_want_complain">I want to complain</string>
    <string name="k_system_alert">System reminder</string>
    <string name="k_force_five_start_des">In order to facilitate your continued use of Timeprint, please give us a positive review before continuing to use it.</string>
    <string name="k_finish_takephoto">Stop using</string>
    <string name="k_clock_now">Remember this moment -- Timeprint</string>
    <string name="i_watermark_meeting">meeting minutes</string>
    <string name="i_meeting_title">title</string>
    <string name="i_meeting_title_content">meeting minutes</string>
    <string name="i_meeting_moderator">Facilitator</string>
    <string name="i_meeting_attendee">attendee</string>
    <string name="i_meeting_attendee_content">attendee</string>
    <string name="i_meeting_attendance">attendance</string>
    <string name="i_meeting_attendance_content">attendance</string>
    <string name="k_time_clock">digital clock</string>
    <string name="i_watermark_clean">clean work</string>
    <string name="i_clean_project">project</string>
    <string name="i_clean_project_content">project name</string>
    <string name="i_clean_people">worker</string>
    <string name="i_clean_people_content">worker name</string>
    <string name="i_watermark_receipt">receipt</string>
    <string name="i_receipt_people">Consignee</string>
    <string name="i_receipt_people_content">Consignee\'s name</string>
    <string name="k_calendar_sun">S</string>
    <string name="k_calendar_mon">M</string>
    <string name="k_calendar_tues">T</string>
    <string name="k_calendar_wed">W</string>
    <string name="k_calendar_thur">T</string>
    <string name="i_play_shutter">shutter sound</string>
    <string name="i_volume_buttons_as_shutter">Use volume buttons as shutter</string>
    <string name="k_show_official_watermark">Show official watermark</string>
    <string name="current_save_folder">Current save folder</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="k_photo_save_path">Photo save path</string>
</resources>