<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/galleryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/btnClose"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentStart="true"
            android:background="@color/black"
            android:src="@drawable/border_close_grey"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/tvShareMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/i_setting"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settings_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/settings_shutter_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/settings_sound_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.MyAppCompatCheckbox
                        android:id="@+id/settings_sound"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_play_shutter" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_volume_buttons_as_shutter_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.MyAppCompatCheckbox
                        android:id="@+id/settings_volume_buttons_as_shutter"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_volume_buttons_as_shutter" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/show_official_watermark_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.MyAppCompatCheckbox
                        android:id="@+id/show_official_watermark"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/k_show_official_watermark" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
