<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"

        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_margin="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_edit_title_tip"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_17"
                android:textStyle="bold" />

            <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.widget.edit.GpInputTextView
                android:id="@+id/titleEdit"
                showSoftInputOnFocus="@{nativeSoftEnable}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_radius_5_ebebed"
                android:hint="@string/k_please_input_title"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize17"
                app:enableClear="false"
                app:subType="title" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleConstraintLayout"
        >
        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginHorizontal="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginLeft="@dimen/dp_16">

            <TextView
                android:id="@+id/contentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/k_edit_content_tip"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16"
                android:textStyle="bold" />

            <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.widget.edit.GpInputTextView
                android:id="@+id/contentEdit"
                showSoftInputOnFocus="@{nativeSoftEnable}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentTitle"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_radius_5_ebebed"
                android:hint="@string/k_please_input_content"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize17"
                app:subType="content" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/operation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/navigation"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/contentConstraintLayout"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:background="@drawable/bg_btn_primary_normal"
            android:gravity="center"
            android:text="@string/i_done"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize17"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
