<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_10_top_ff"
    android:clickable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@drawable/bg_radius_10_top_ff"
        app:layout_constraintTop_toTopOf="@id/backIv"
        >
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backIv"
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_56"
        android:src="@drawable/ic_chevron_left_vector"
        android:tint="@color/black"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="#0a000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIv"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:text="@string/k_color_size"
        android:lineHeight="@dimen/dp_56"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/dp_17"
        app:layout_constraintStart_toEndOf="@+id/backIv"
        app:layout_constraintBottom_toTopOf="@id/divider"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_radius_10_top_ff"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/template_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:text="@string/k_template_color"
            android:lineHeight="@dimen/dp_46"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/dp_17"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.widget.ColorSelectScrollView
            android:id="@+id/template_color_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:minHeight="40dp"
            android:layout_marginBottom="@dimen/dp_0"/>
        <TextView
            android:id="@+id/text_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:text="@string/k_text_color"
            android:lineHeight="@dimen/dp_46"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/dp_17"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.widget.ColorSelectScrollView
            android:id="@+id/text_color_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:minHeight="40dp"
            android:layout_marginBottom="@dimen/dp_20">
        </com.timestampcamerafree.gpsmapcameratimemark.geotagginglocationonphoto.views.widget.ColorSelectScrollView>
        <TextView
            android:id="@+id/template_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:text="@string/k_template_size"
            android:lineHeight="@dimen/dp_46"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/dp_17"
            app:layout_constraintStart_toStartOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp_60">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/slider_left_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/k_logo_small"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_17"
                    />

                <TextView
                    android:id="@+id/slider_right_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/k_logo_large"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_17"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.slider.Slider
                    android:id="@+id/template_size_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:valueFrom="0"
                    android:valueTo="3"
                    android:stepSize="0.01"
                    app:thumbColor="@color/color_0093ff"
                    app:trackColor="@color/color_0093ff"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
