<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="6dp">
        <ImageButton
            android:id="@+id/btnClose"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentStart="true"
            android:background="@color/black"
            android:src="@drawable/border_close_grey"
            app:tint="@color/white"/>
        <TextView
            android:id="@+id/tvShareMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/k_photo_save_path"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">
    <TextView
        android:id="@+id/current_path_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/current_save_folder"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/current_path_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folder_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:id="@+id/create_folder_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/button_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/contentConstraintLayout"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/create_folder_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/create_new_folder"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize17"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_btn_primary_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/contentConstraintLayout"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/done_btn_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/i_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize17"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>